Creacion de pantallas del dash
Creacion de  3 pantallas del dash con respecto a las categorias

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,10 @@
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".DashboardActivity" />
         <activity android:name=".ShopActivity"></activity>
+        <activity android:name=".HamburguesasActivity"></activity>
+        <activity android:name=".PizzaActivity"></activity>
+        <activity android:name=".PostresActivity"></activity>
+
     </application>
 
 </manifest>
