--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name=".PerfilActivity" />
         <activity android:name=".Productos.ActividadProducto" />
         <activity android:name=".Productos.AgregarProducto" />
+        <activity android:name="DireccionActivity"></activity>
+        <activity android:name=".AddireccionActivity"></activity>
     </application>
 
 </manifest>
