--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/iconoapp"
         android:supportsRtl="true"
         android:theme="@style/Theme.Guia07App">
-        <activity android:name=".SeleccionDireccionActivity"></activity>
+        <activity android:name=".HistorialActivity"></activity>
+        <activity android:name=".AdaptadorHistorial" />
+        <activity android:name=".SeleccionDireccionActivity" />
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
